--- a/packages/metro-config/package.json
+++ b/packages/metro-config/package.json
@@ -34,7 +34,8 @@
     "transformer.js"
   ],
   "dependencies": {
-    "@expo/config": "3.1.2"
+    "@expo/config": "3.1.2",
+    "metro-react-native-babel-transformer": "^0.58.0"
   },
   "peerDependencies": {
     "metro": "^0.56.0",
